@@ -1283,10 +1283,10 @@ class _Course
     // If the catalog year is greater than the currentCatalogYear
     // setting, then set it to that.
 
-    $settings = $this->db->get_flightpath_settings();
-    if ($this->catalog_year > $settings["current_catalog_year"])
+
+    if ($this->catalog_year > $GLOBALS["fp_system_settings"]["current_catalog_year"])
     {
-      $this->catalog_year = $settings["current_catalog_year"];
+      $this->catalog_year = $GLOBALS["fp_system_settings"]["current_catalog_year"];
     }
 
 
